// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SingleInputDateField renders without picker 1`] = `
<DocumentFragment>
  <div
    class="ds-c-single-input-date-field"
  >
    <label
      class="ds-c-label"
      for="field_1"
      id="field_1-label"
    >
      <span
        class=""
      >
        Birthday
      </span>
      <span
        class="ds-c-field__hint"
      >
        Please enter your birthday
      </span>
    </label>
    <div
      class="ds-c-label-mask"
      id="labelmask_2"
    >
      <span
        class=""
      >
        MM/DD/YYYY
      </span>
      <span
        aria-hidden="true"
        class="ds-u-display--none"
      >
        MM/DD/YYYY
      </span>
    </div>
    <div
      class="ds-c-single-input-date-field__field-wrapper"
    >
      <input
        aria-describedby="labelmask_2"
        aria-invalid="false"
        class="ds-c-field"
        id="field_1"
        inputmode="numeric"
        name="single-input-date-field"
        type="text"
        value=""
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`SingleInputDateField with picker renders with picker 1`] = `
<DocumentFragment>
  <div
    class="ds-c-single-input-date-field ds-c-single-input-date-field--with-picker"
  >
    <label
      class="ds-c-label"
      for="field_15"
      id="field_15-label"
    >
      <span
        class=""
      >
        What day did you move?
      </span>
      <span
        class="ds-c-field__hint"
      >
        This date should be within the past 60 days in order to qualify
      </span>
    </label>
    <div
      class="ds-c-label-mask"
      id="labelmask_16"
    >
      <span
        class=""
      >
        MM/DD/YYYY
      </span>
      <span
        aria-hidden="true"
        class="ds-u-display--none"
      >
        MM/DD/YYYY
      </span>
    </div>
    <div
      class="ds-c-single-input-date-field__field-wrapper"
    >
      <input
        aria-describedby="labelmask_16"
        aria-invalid="false"
        class="ds-c-field"
        id="field_15"
        inputmode="numeric"
        name="single-input-date-field"
        type="text"
        value=""
      />
      <button
        class="ds-c-single-input-date-field__button"
      >
        <svg
          aria-hidden="false"
          aria-labelledby="icon-17__title"
          class="ds-c-icon ds-c-icon--calendar "
          focusable="false"
          id="icon-17"
          role="img"
          viewBox="0 0 448 512"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title
            id="icon-17__title"
          >
            Open calendar picker dialog
          </title>
          <path
            d="M152 64H296V24C296 10.75 306.7 0 320 0C333.3 0 344 10.75 344 24V64H384C419.3 64 448 92.65 448 128V448C448 483.3 419.3 512 384 512H64C28.65 512 0 483.3 0 448V128C0 92.65 28.65 64 64 64H104V24C104 10.75 114.7 0 128 0C141.3 0 152 10.75 152 24V64zM48 448C48 456.8 55.16 464 64 464H384C392.8 464 400 456.8 400 448V192H48V448z"
          />
        </svg>
      </button>
    </div>
  </div>
</DocumentFragment>
`;
